--- a/quotes/index.html
+++ b/quotes/index.html
@@ -1,1 +1,6 @@
 html <h2>Quotes</h2><ul><li><a href="quote1.html">Albert Einstein</a></li><li><a href="quote2.html">J.K. Rowling</a></li></ul>
+<h2>Quotes</h2>
+<ul>
+  <li><a href="quote1.html">Albert Einstein</a></li>
+  <li><a href="quote2.html">J.K. Rowling</a></li>
+</ul>
