--- a/quotes/quote2.html
+++ b/quotes/quote2.html
@@ -1,1 +1,1 @@
-html <p>"It is our choices, Harry, that show what we truly are, far more than our abilities." – J.K. Rowling</p>
+<p>"It is our choices, Harry, that show what we truly are, far more than our abilities." – J.K. Rowling</p>
