--- a/quotes/index.html
+++ b/quotes/index.html
@@ -1,5 +1,6 @@
-<h2>Quotes</h2>
 <ul>
-  <li><a href="quote1.html">Albert Einstein</a></li>
-  <li><a href="quote2.html">J.K. Rowling</a></li>
+  <li><a href="about/">About</a></li>
+  <li><a href="blog/">Blog</a></li>
+  <li><a href="quotes/">Quotes</a></li>
+  <li><a href="contact/">Contact</a></li>
 </ul>
